force-app/main/default/objects/ImputationDommages__c/ImputationDommages__c.object-meta.xml
<CustomObject>
    <label>Imputation et dommages</label>
    <nameField>
        <displayFormat>ID-{00000}</displayFormat>
        <label>Nom de IMPUTATION et DOMMAGES</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Imputations et dommages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>