force-app/main/default/objects/ImputationDommages__c/fields/CoutDommage__c.field-meta.xml
<CustomField>
    <fullName>CoutDommage__c</fullName>
    <description>Uniquement si Dommage chiffré = OUI</description>
    <label>Coût du dommage</label>
    <summarizedField>LigneChiffrage__c.PrixHT__c</summarizedField>
    <summaryFilterItems>
        <field>LigneChiffrage__c.DommageChiffre__c</field>
        <operation>equals</operation>
        <value>Oui</value>
    </summaryFilterItems>
    <summaryForeignKey>LigneChiffrage__c.ImputationDommages__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>