force-app/main/default/objects/ImputationDommages__c/fields/DommageChiffre__c.field-meta.xml
<CustomField>
    <fullName>DommageChiffre__c</fullName>
    <label>Dommage chiffré</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>