force-app/main/default/objects/ImputationDommages__c/fields/Dossier__c.field-meta.xml
<CustomField>
    <fullName>Dossier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relation Imputation et dommages vers Dossier</description>
    <label>Dossier</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Imputations et dommages</relationshipLabel>
    <relationshipName>Imputations_et_dommages</relationshipName>
    <type>Lookup</type>
</CustomField>