force-app/main/default/objects/ImputationDommages__c/fields/ElementImpacte__c.field-meta.xml
<CustomField>
    <fullName>ElementImpacte__c</fullName>
    <label>Élément Impacté</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PointChoc__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bouclier</fullName>
            </value>
            <value>
                <fullName>Optique phare court</fullName>
            </value>
            <value>
                <fullName>Feu</fullName>
            </value>
            <value>
                <fullName>Aile</fullName>
            </value>
            <value>
                <fullName>Enjol roue</fullName>
            </value>
            <value>
                <fullName>Roue</fullName>
            </value>
            <value>
                <fullName>Protection</fullName>
            </value>
            <value>
                <fullName>Capot</fullName>
            </value>
            <value>
                <fullName>Calandre</fullName>
            </value>
            <value>
                <fullName>Hayon</fullName>
            </value>
            <value>
                <fullName>Lunette AR</fullName>
            </value>
            <value>
                <fullName>Rétro</fullName>
            </value>
            <value>
                <fullName>Porte AV</fullName>
            </value>
            <value>
                <fullName>Porte AR</fullName>
            </value>
            <value>
                <fullName>Haut de caisse</fullName>
            </value>
            <value>
                <fullName>Bas de caisse</fullName>
            </value>
            <value>
                <fullName>Vitre AV</fullName>
            </value>
            <value>
                <fullName>Vitre AR</fullName>
            </value>
            <value>
                <fullName>Pare brise</fullName>
            </value>
            <value>
                <fullName>Pavillon</fullName>
            </value>
            <value>
                <fullName>Ensemble</fullName>
            </value>
            <value>
                <fullName>Partie supérieure</fullName>
            </value>
            <value>
                <fullName>Partie inférieure</fullName>
            </value>
            <value>
                <fullName>AV</fullName>
            </value>
            <value>
                <fullName>AV G</fullName>
            </value>
            <value>
                <fullName>AV D</fullName>
            </value>
            <value>
                <fullName>Lateral G</fullName>
            </value>
            <value>
                <fullName>Lateral D</fullName>
            </value>
            <value>
                <fullName>AR G</fullName>
            </value>
            <value>
                <fullName>AR D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>