force-app/main/default/objects/ImputationDommages__c/fields/ImputabiliteChoc__c.field-meta.xml
<CustomField>
    <fullName>ImputabiliteChoc__c</fullName>
    <label>Imputabilité du choc</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Imputable</fullName>
            </value>
            <value>
                <fullName>Non imputable</fullName>
            </value>
            <value>
                <fullName>Non déclaré</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>