force-app/main/default/objects/ImputationDommages__c/fields/IntensiteChoc__c.field-meta.xml
<CustomField>
    <fullName>IntensiteChoc__c</fullName>
    <label>Intensité du choc</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Important</fullName>
            </value>
            <value>
                <fullName>Violent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>