force-app/main/default/objects/ImputationDommages__c/fields/JustificationImputabilite__c.field-meta.xml
<CustomField>
    <fullName>JustificationImputabilite__c</fullName>
    <label>Justification de l&#39;imputabilité</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ImputabiliteChoc__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corrosion</fullName>
            </value>
            <value>
                <fullName>Chocs</fullName>
            </value>
            <value>
                <fullName>Grêle</fullName>
            </value>
            <value>
                <fullName>Effraction</fullName>
            </value>
            <value>
                <fullName>Peinture abimée</fullName>
            </value>
            <value>
                <fullName>Présence de tags</fullName>
            </value>
            <value>
                <fullName>Séquelles réparation</fullName>
            </value>
            <value>
                <fullName>Cassure</fullName>
            </value>
            <value>
                <fullName>Déchirure</fullName>
            </value>
            <value>
                <fullName>Salissure</fullName>
            </value>
            <value>
                <fullName>Usure</fullName>
            </value>
            <value>
                <fullName>Fuite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>