force-app/main/default/objects/ImputationDommages__c/fields/NatureSinistreConstate__c.field-meta.xml
<CustomField>
    <fullName>NatureSinistreConstate__c</fullName>
    <label>Nature du sinistre constaté</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SinistreConstate__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collision avec un véhicule</fullName>
            </value>
            <value>
                <fullName>Collision avec plusieurs véhicule</fullName>
            </value>
            <value>
                <fullName>Choc avec un corps fixe</fullName>
            </value>
            <value>
                <fullName>Collision avec un corps mobile</fullName>
            </value>
            <value>
                <fullName>Collision avec un piéton</fullName>
            </value>
            <value>
                <fullName>Collision avec un animal</fullName>
            </value>
            <value>
                <fullName>Versement sans collision prélable</fullName>
            </value>
            <value>
                <fullName>Choc entre composants d&#39;un même attelage</fullName>
            </value>
            <value>
                <fullName>Echouement sur rochers</fullName>
            </value>
            <value>
                <fullName>Collision avec une pièce mécanique</fullName>
            </value>
            <value>
                <fullName>Collision avec un bateau</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>