force-app/main/default/objects/ImputationDommages__c/fields/NumeroChoc__c.field-meta.xml
<CustomField>
    <fullName>NumeroChoc__c</fullName>
    <label>Numéro du choc</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>