force-app/main/default/objects/ImputationDommages__c/fields/OrientationChoc__c.field-meta.xml
<CustomField>
    <fullName>OrientationChoc__c</fullName>
    <label>Orientation du choc</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PointChoc__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>135</fullName>
            </value>
            <value>
                <fullName>180</fullName>
            </value>
            <value>
                <fullName>225</fullName>
            </value>
            <value>
                <fullName>270</fullName>
            </value>
            <value>
                <fullName>315</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>