force-app/main/default/objects/ImputationDommages__c/fields/PointChoc__c.field-meta.xml
<CustomField>
    <fullName>PointChoc__c</fullName>
    <label>Point de choc</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ImputabiliteChoc__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zone AV D</fullName>
            </value>
            <value>
                <fullName>Zone AV G</fullName>
            </value>
            <value>
                <fullName>Zone AR D</fullName>
            </value>
            <value>
                <fullName>Zone AR G</fullName>
            </value>
            <value>
                <fullName>Zone Laterale D</fullName>
            </value>
            <value>
                <fullName>Zone Laterale G</fullName>
            </value>
            <value>
                <fullName>Zone d&#39;ensemble</fullName>
            </value>
            <value>
                <fullName>Zone détaillée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>