force-app/main/default/objects/ImputationDommages__c/fields/SinistreConstate__c.field-meta.xml
<CustomField>
    <fullName>SinistreConstate__c</fullName>
    <label>Sinistre constaté</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collision</fullName>
            </value>
            <value>
                <fullName>Incendie</fullName>
            </value>
            <value>
                <fullName>Vol</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>