force-app/main/default/objects/ImputationDommages__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CoutDommage__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>PointChoc__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>